next
----
-tag_data: new component (designed for use in CloVR)
-move_hmmpfam_results.pl: now handles htab with no model name in column 6
-prepare_paired_ends_for_velvet: new component
-velvet_optimiser: now allows an arbitrary number of input files
-create_amoscmp_input: new component
-identify_human_contaminants: new component
-rrna_hmm_fs: new component
-metagene: fixed bug in metagene2bsml.pl script where a zero orf count would cause ungraceful termination
-crossbow: new componet for short-read mapping. Designed for use with a hadoop cluster
-celera_assembler_mer: new component use for hybrid assemblies. Designed for use in cloud (non shared) environments
-velvet_optimser: new component
-celera2hawkeye: new component
-celera_assembler_cloud: updated to fix bug where stderr was being written to a non-existant folder
-amoscmp: new component
-sfffile: new component
-nucmer: new component
-celera_assembler: added cloud variants to component
-uclust: new component
-metagene: moved dtdvalidation into an iterator to handle multiple bsml output produced by metagene.
-split_multifasta: added support for 'total_files' parameter that allows user to specify the exact amount of output files wanted
-translate_sequence: updated to make use of the Fasta::SimpleIndexer module for sequence lookups.
-sffinfo: new component
-p_func/parse_evidence: Database path is now configurable
-metagene: updated metagene2bsml script to use the Ergatis::IdGenerator module for feature ID's.
-translate_sequence: added option to delete any fasta files generated by component that aren't gene/polypeptide sequences.
-tbl2asn: Reworked component so now it won't require a ITERATOR_LIST_FILE, and can be chained to the end of a bsml2tbl run
-ber: added project_abbreviation config variable so berbtab2bsml isn't dependent on specific assembly id patterns.
-augustus2bsml.pl: added 2.3.1 to version map
-glimmer3: added support for single input files