@@ -12,11 +12,15 @@ $;RNA_BSML$; =
 $;EVIDENCE_BSML$; = 
 
 [input]
-$;INPUT_FILE_LIST$; = 
-$;INPUT_FILE$; = 
-$;INPUT_DIRECTORY$; = 
+;; You shouldn't change this. Used to iterate over the generated BSML files.
+$;INPUT_FILE_LIST$; = $;BSML_OUTPUT_LIST$;
+$;INPUT_FILE$; =
+$;INPUT_DIRECTORY$; =
 ;; the following is only used when iterating over an INPUT_DIRECTORY
-$;INPUT_EXTENSION$; = bsml
+$;INPUT_EXTENSION$; = fsa
+
+$;BSML_INPUT_LIST$; = 
+$;BSML_INPUT_FILE$; = 
 
 [output]
 $;OUTPUT_TOKEN$; = default
@@ -50,5 +54,6 @@ $;PIPELINEID$; =
 
 [include]
 $;PROJECT_CONFIG$;=
+
 
 
