@@ -18,11 +18,45 @@
             <state>incomplete</state>
             <executable>mkdir</executable>
             <arg>-p -m 777 $;TMP_DIR$;</arg>
+        </command>        
+        <command>
+            <type>RunDistributedCommand</type>
+            <name>analyze overlaps</name>
+            <state>incomplete</state>
+            <executable>$;BIN_DIR$;/overlap_analysis</executable>
+            <param>  
+                <key>--input_list</key>
+                <value>&quot;$;BSML_INPUT_LIST$;&quot;</value>
+            </param>
+            <param>  
+                <key>--input_file</key>
+                <value>&quot;$;BSML_INPUT_FILE$;&quot;</value>
+            </param>
+            <param>  
+                <key>--rna_bsml</key>
+                <value>$;RNA_BSML$;</value>
+            </param>
+            <param>  
+                <key>--evidence_bsml</key>
+                <value>$;EVIDENCE_BSML$;</value>
+            </param>
+            <param>  
+                <key>--output_directory</key>
+                <value>$;OUTPUT_DIRECTORY$;</value>
+            </param>
+            <param>  
+                <key>--cutoff</key>
+                <value>$;CUTOFF$;</value>
+            </param>
+            <param>  
+                <key>--flagged_overlaps_file</key>
+                <value>$;OUTPUT_DIRECTORY$;/flagged_overlaps.txt</value>
+            </param>
+            <param>  
+                <key>--log</key>
+                <value>$;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.log</value>
+            </param>
         </command>
-        <!--Processing-->
-        <!--Iterator-->
-        <INCLUDE file="$;DOCS_DIR$;/file_iterator_template.xml" keys="$;ITERATOR_NAME$;=ITERATOR1,$;ITERATOR_XML$;=ITERATOR1_XML">
-        <!--Postprocessing-->
         <command>
             <type>RunUnixCommand</type>
             <name>create bsml list</name>
@@ -41,5 +75,6 @@
                 <value>$;BSML_OUTPUT_LIST$;</value>
             </param>
         </command>
+        <INCLUDE file="$;DOCS_DIR$;/file_iterator_template.xml" keys="$;ITERATOR_NAME$;=ITERATOR1,$;ITERATOR_XML$;=ITERATOR1_XML">
     </commandSet>
 </commandSetRoot>
